// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 dHxItz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eoqJMT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kGUHIl"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 eBQaEk"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dCgOes"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bCRYpg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 SPpzV"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 kNdGTu"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 fQJNXZ"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 bBnSLk"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gbjOZW"
            >
              <a
                class="StyledButton-sc-323bzc-0 NskAo"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jWNEco"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 gWnZJx"
      >
        <span
          class="StyledText-sc-1sadyjn-0 eGalsZ"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jWNEco"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kGUHIl"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gNEGZE FileInput__ContentsBox-sc-1jzq7im-0 eHwXVo"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 gSwStq"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fPzyAZ"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fdqFDQ FileInput__Message-sc-1jzq7im-2 cYbnmp"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 dBTlEj"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jWNEco"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 VAHoz"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kGUHIl"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 KixzA"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 kNyYZH"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dANPZn"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kFOKOa"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 iwrwVr"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
              />
              <span
                class="StyledText-sc-1sadyjn-0 bUaPwj"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jWNEco"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kGUHIl"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 cOPmdR"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 WKXKc"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 cEMmsY"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 dHxItz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eoqJMT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kGUHIl"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 iFWuaS"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dCgOes"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bCRYpg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 SPpzV"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 kNdGTu"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 fQJNXZ"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gbjOZW"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kNXwgQ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 cEMmsY"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jWTNKp FormField__FormFieldContentBox-sc-m9hood-1 fVnulP"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cmVLrY"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 jLkWqG"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cPibdG"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 ilJScU StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bpNzrn"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 kMAmUg FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jWKFVq"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ilJScU StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bpNzrn"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jWTNKp FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eCrjBD StyledSelect__StyledSelectDropButton-sc-znp66n-5 ipLJsT"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jYOChC"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iCJxY"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cmVLrY"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 jLkWqG StyledSelect__SelectTextInput-sc-znp66n-4 fLDbPw"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gBvDWx"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gazUAs"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 cPcQIx"
          >
            <button
              class="StyledButton-sc-323bzc-0 NskAo"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 dHxItz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eoqJMT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kGUHIl"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 iFWuaS"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dCgOes"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bCRYpg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 SPpzV"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 kNdGTu"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 fQJNXZ"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gbjOZW"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kNXwgQ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 cEMmsY"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jWTNKp FormField__FormFieldContentBox-sc-m9hood-1 fVnulP"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cmVLrY"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 jLkWqG"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cPibdG"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 ilJScU StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bpNzrn"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 kMAmUg FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jWKFVq"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ilJScU StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bpNzrn"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hEsmUd"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bfFPqi StyledRadioButton-sc-g1f6ld-5 glMvgI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cOerag StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 agFQa"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jWTNKp FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eCrjBD StyledSelect__StyledSelectDropButton-sc-znp66n-5 ipLJsT"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jYOChC"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iCJxY"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cmVLrY"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 jLkWqG StyledSelect__SelectTextInput-sc-znp66n-4 fLDbPw"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gBvDWx"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gazUAs"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 cPcQIx"
          >
            <button
              class="StyledButton-sc-323bzc-0 NskAo"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 dHxItz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 KEGsx"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 liGnpu"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 bNdNhL FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
          >
            <label
              class="StyledText-sc-1sadyjn-0 diILnA"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jWTNKp FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 eCrjBD StyledSelect__StyledSelectDropButton-sc-znp66n-5 ipLJsT"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jYOChC"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iCJxY"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 fvHovX"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 fhySdV"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 csJsNn"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 gAwlmU"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 iIetIj"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gBvDWx"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gazUAs"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 kZIUfS"
          >
            <button
              class="StyledButton-sc-323bzc-0 NskAo"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 dHxItz"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 gATluD"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jzGJUh"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gitdUV"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gTRrQi dKmzME"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 jnWgTr"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
